--- a/main.css
+++ b/main.css
@@ -1,8 +1,80 @@
-/* body {
+* {
   margin: 0;
-  mar
-} */
+}
+
+html {
+  background-color: rgb(252, 226, 197);
+}
+
+body {
+  margin: 0;
+  margin-top: 100px;
+  width: 1000px;
+  margin-left:auto;
+  margin-right: auto;
+  background-color: white;
+}
+
+
 
 #canvas {
   background: url('./images/background.jpeg')
 }
+
+.score-div {
+  position: fixed;
+  color: white;
+  font-family: sans-serif;
+  margin-left: 2px;
+  margin-top: 2px;
+  user-select: none;
+}
+
+.modal-container {
+  position: absolute;
+  top: 377px;
+  left: 250px;
+  height: 150px;
+  width: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: white;
+  padding-bottom: 20px;
+  border-radius: 20px;
+}
+
+.modal-background {
+  font-family: sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 85px;
+  width: 400px;
+}
+
+.modal-background h1 {
+  font-size: 40px;
+  line-height: none;
+}
+
+.modal-background p {
+  color: gray;
+  margin-bottom: 5px;
+}
+
+.start-div {
+  width: 100%;
+}
+
+.start-button {
+    background-color: rgb(131, 57, 67);
+    color: white;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    cursor: pointer;
+    border-radius: 20px;
+}
+
+
