--- a/main.css
+++ b/main.css
@@ -31,21 +31,25 @@ body {
 }
 
 .modal-container {
-  position: absolute;
-  top: 377px;
-  left: 250px;
-  height: 150px;
-  width: 500px;
+  /* position: relative; */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  /* height: 150px;
+  width: 500px; */
   display: flex;
   align-items: center;
   justify-content: center;
-  background: white;
+  background: green;
   padding-bottom: 20px;
   border-radius: 20px;
 }
 
 .modal-background {
+  position: absolute;
   font-family: sans-serif;
+  background: white;
   display: flex;
   flex-direction: column;
   align-items: center;
