Add explosion sprite

--- a/main.css
+++ b/main.css
@@ -35,8 +35,8 @@ audio {
 }
 
 .modal-container {
-  position: absolute;
-  top: 200px;
+  /* position: absolute; */
+  /* top: 200px; */
   /* left: 0;
   right: 0;
   bottom: 0; */
