--- a/main.css
+++ b/main.css
@@ -3,7 +3,8 @@
 }
 
 html {
-  background-color: rgb(252, 226, 197);
+  background-color: rgb(4, 6, 6);
+ 
 }
 
 body {
@@ -15,19 +16,36 @@ body {
   background-color: white;
 }
 
+.logo {
+  /* position: absolute; */
+  width: 1000px;
+  display: flex;
+  justify-content: center;
+  background: rgb(4, 6, 6);
+}
+
+.logo h1 {
+  
+}
+
 
 
 #canvas {
-  background: url('./images/background.jpeg')
+  background: url('./images/background.jpeg');
+  
 }
 
 .score-div {
   position: fixed;
   color: white;
   font-family: sans-serif;
+  display: flex;
+  width: 1000px;
+  justify-content: space-evenly;
   margin-left: 2px;
   margin-top: 2px;
   user-select: none;
+  font-size: 32px;
 }
 
 audio {
@@ -35,38 +53,50 @@ audio {
 }
 
 .modal-container {
-  /* position: absolute; */
-  /* top: 200px; */
-  /* left: 0;
-  right: 0;
-  bottom: 0; */
-  /* height: 150px;
-  width: 500px; */
+  position: fixed;
+  height: 150px;
+  width: 500px;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   align-items: center;
   justify-content: center;
-  background: green;
-  padding-bottom: 20px;
-  border-radius: 20px;
+  z-index: 1;
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+  
+  
 }
 
-.modal-background {
-  position: absolute;
+.modal-content {
+  position: relative;
+  z-index: 1;
   font-family: sans-serif;
   background: white;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 85px;
-  width: 400px;
+  height: 110px;
+  width: 100%;
+  padding: 10px;
+  border-radius: 10px;
+
 }
 
-.modal-background h1 {
+@keyframes animatetop {
+  from {top: -300px; opacity: 0}
+  to {top: 35%; opacity: 1}
+}
+
+.modal-content h1 {
   font-size: 40px;
   line-height: none;
 }
 
-.modal-background p {
+
+
+.modal-content p {
   color: gray;
   margin-bottom: 5px;
 }
@@ -86,3 +116,18 @@ audio {
 }
 
 
+
+.life {
+  color: #1de823;
+}
+
+.blinking{
+  animation:blinkingText 0.5s infinite;
+}
+@keyframes blinkingText{
+    0%{     color: #1de823;    }
+    49%{    color:#1de823; }
+    60%{    color: transparent; }
+    99%{    color:transparent;  }
+    100%{   color: rgb(255, 0, 0);    }
+}
