--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ html {
 
 body {
   margin: 0;
-  margin-top: 100px;
+  /* margin-top: 100px; */
   width: 1000px;
   margin-left:auto;
   margin-right: auto;
