--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ body {
 }
 
 .score-div {
-  position: fixed;
+  position: absolute;
   color: white;
   font-family: 'Orbitron', sans-serif;
   display: flex;
@@ -42,6 +42,7 @@ body {
   user-select: none;
   font-size: 32px;
   padding-top: 3px;
+  
 }
 
 audio {
@@ -49,7 +50,7 @@ audio {
 }
 
 .modal-container {
-  position: fixed;
+  position: absolute;
   height: 150px;
   width: 500px;
   top: 35%;
